[package]
name = "tailers"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
tracing = "0.1.10"
tracing-subscriber = "0.1.6"
notify = "4.0.14"
chrono = "0.4.10"
